tests/tooling/fixtures/native/execution/positive/switch_case_relational_false_fallthrough_return.objc3
module SwitchCaseRelationalFalseFallthroughReturn;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      while (2 < 1) {
        return 9;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
