tests/tooling/fixtures/native/execution/negative/switch_case_loop_escape_conservative_reject.objc3
module SwitchCaseLoopEscapeConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      while (value == 1) {
        break;
      }
    case 2:
      return 42;
    default:
      return 9;
  }
}
